# mcgarnagle

./: .gitignore  Cargo.toml  README.md  circuit.py  evaluator.py  garbler.py  main.py  optim.py  test_and.py  test_nor.py  test_xor.py  utils.py
benches/: bristol_add64.rs  bristol_sha256.rs  my_benchmark.rs  yosys_add64.rs
circuits/: add2.v  add64.v  add64.ys  max2.v  mul8.v  simple.txt  synth.ys  synth_add64.json  synth_add64.v  synthesized.json  synthesized.v
src/: evaluator.rs  garbler.rs  lib.rs  main.rs  utils.rs
src/optimizer/: mod.rs  optim.rs
src/ot/: mod.rs
src/parser/: bristol.rs  mod.rs  yosys.rs
