[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "yosys_add64"
harness = false

[dependencies]
base64 = "0.21.7"
egg = "0.9.5"
env_logger = "0.11.2"
fernet = "0.2.1"
hmac = "0.12.1"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
